Styles and partials

--- a/06-AdvancedExpress/EJSDemo/views/home.ejs
+++ b/06-AdvancedExpress/EJSDemo/views/home.ejs
@@ -1,2 +1,7 @@
+<%- include("partials/header") %> <!-- No need to add the .ejs extension  -->
+<!-- <link rel="stylesheet" href="app.css"> This is included in the partial -->
+
 <h1>Welcome to the website (from inside the home.ejs file)!</h1>
 <img src="https://www.awlqld.com.au/wp-content/uploads/2014/07/ThinkstockPhotos-153805747.jpg" alt="">
+
+<%- include("partials/footer") %>
