--- a/06-AdvancedExpress/PostRequestDemo/views/friends.ejs
+++ b/06-AdvancedExpress/PostRequestDemo/views/friends.ejs
@@ -5,6 +5,6 @@
 <% }); %>
 
 <form action="/addfriend" method="POST">
-    <input type="text" name="newFriend" id="newFriend" placeholder="Type friend's name here">
+    <input type="text" name="newFriend" placeholder="Type friend's name here"> <!-- The "name" is the key. -->
     <button>I made a new friend!</button>
 </form>
