--- a/05-Authentication/AuthDemo/views/secret.ejs
+++ b/05-Authentication/AuthDemo/views/secret.ejs
@@ -1,3 +1,7 @@
 <h1>This is a secret page</h1>
 
 <img src="https://coda.newjobs.com/api/imagesproxy/ms/cms/content30/images/jobs-keep-secret.jpg" alt="This is a secret">
+
+<li><a href="/register">Sign up!</a></li>
+<li><a href="/login">Login</a></li>
+<li><a href="/logout">Logout</a></li>
