--- a/05-Authentication/AuthDemo/views/home.ejs
+++ b/05-Authentication/AuthDemo/views/home.ejs
@@ -1,3 +1,5 @@
 <h1>This is the homepage</h1>
 
 <li><a href="/register">Sign up!</a></li>
+<li><a href="/login">Login</a></li>
+<li><a href="/logout">Logout</a></li>
