--- a/05-Authentication/AuthDemo/views/login.ejs
+++ b/05-Authentication/AuthDemo/views/login.ejs
@@ -1,6 +1,6 @@
-<h1>Sign up Form</h1>
+<h1>Login</h1>
 
-<form action='/register' method='POST'>
+<form action="/login" method="POST">
     <input type="text" name="username" placeholder="Username">
     <input type="password" name="password" placeholder="Password">
     <input type="submit">
